--- a/BestStoreMVC/BestStoreMVC/Views/Products/Index.cshtml
+++ b/BestStoreMVC/BestStoreMVC/Views/Products/Index.cshtml
@@ -43,7 +43,7 @@
                 <td style="white-space:nowrap">
                     <a class="btn btn-primary btn-sm" asp-controller="Products" asp-action="Edit"
                         asp-route-id="@product.Id">Edit</a>
-                    <a class="btn btn-danger btn-sm" asp-controller="Porudcts" asp-action="Delete"
+                    <a class="btn btn-danger btn-sm" asp-controller="Products" asp-action="Delete"
                         asp-route-id="@product.Id">Delete</a>
                 </td>
             </tr>
